# webserver

./: .dockerignore  Dockerfile  Makefile  pyproject.toml  readme.md
.github/workflows/: build-test-deploy.yml
src/: Makefile  http_server.c  http_server.h  network_utils.h
tests/: test.py  test_concurrency.py  test_main.c
tests/resources/: test.html
