[tool.poetry]
name = "webserver"
version = "0.1.0"
description = "A test for webserver"
authors = ["juliusalberto <u7724204@anu.edu.au>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
